# MiningNiti-Ap

./: .env  .gitignore  Procfile  README.md  app.py  pyproject.toml  railway.json  render.yaml  requirements.txt
conf/: variables.yaml
src/: # db.py  # utils.py  db.py  model.py  utils.py
